--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
             "src": "app.js",
             "use": "@vercel/node"
         }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "app.js"
+        }
     ]
 }
